// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SplitterLayout Render Horizontal SplitterLayout with multiple SplitterElements 1`] = `
<DocumentFragment>
  <div
    class="SplitterLayout-splitterLayout"
    data-splitter-orientation="horizontal"
    data-testid="Layout"
    style="width: 80vw; height: 600px;"
  >
    <div
      class="SplitterElement-splitterElement"
      style="min-height: 0;"
    >
      <ui5-button
        design="Default"
        ui5-button=""
      >
        Button 1
      </ui5-button>
    </div>
    <div
      class="Splitter-splitter"
      data-splitter-orientation="horizontal"
      role="separator"
    >
      <div
        class="Splitter-lineBefore"
      />
      <ui5-icon
        class="Splitter-icon"
        name="horizontal-grip"
        ui5-icon=""
      />
      <div
        class="Splitter-lineAfter"
      />
    </div>
    <div
      class="SplitterElement-splitterElement"
      data-testid="Element"
      style="min-height: 50px; max-height: 200px; flex-basis: 100px;"
    >
      <ui5-button
        design="Default"
        ui5-button=""
      >
        Button 2
      </ui5-button>
    </div>
    <div
      class="Splitter-splitter"
      data-splitter-orientation="horizontal"
      role="separator"
    >
      <div
        class="Splitter-lineBefore"
      />
      <ui5-icon
        class="Splitter-icon"
        name="horizontal-grip"
        ui5-icon=""
      />
      <div
        class="Splitter-lineAfter"
      />
    </div>
    <div
      class="SplitterElement-splitterElement"
      style="min-height: 0;"
    >
      <ui5-button
        design="Default"
        ui5-button=""
      >
        Button 3
      </ui5-button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SplitterLayout Render SplitterLayout without props and children 1`] = `
<DocumentFragment>
  <div
    class="SplitterLayout-splitterLayout"
    data-splitter-orientation="vertical"
  />
</DocumentFragment>
`;

exports[`SplitterLayout Render Vertical SplitterLayout with multiple SplitterElements 1`] = `
<DocumentFragment>
  <div
    class="SplitterLayout-splitterLayout"
    data-splitter-orientation="vertical"
    data-testid="SplitterLayout"
    style="width: 800px; height: 400px;"
  >
    <div
      class="SplitterElement-splitterElement"
      data-testid="SplitterElement1"
      style="min-width: 0; flex-basis: 200px;"
    >
      <ui5-button
        data-testid="Button"
        design="Default"
        ui5-button=""
      >
        Button 1
      </ui5-button>
    </div>
    <div
      class="Splitter-splitter"
      data-splitter-orientation="vertical"
      role="separator"
    >
      <div
        class="Splitter-lineBefore"
      />
      <ui5-icon
        class="Splitter-icon"
        name="vertical-grip"
        ui5-icon=""
      />
      <div
        class="Splitter-lineAfter"
      />
    </div>
    <div
      class="SplitterElement-splitterElement"
      data-testid="SplitterElement2"
      style="min-width: 300px; max-width: 500px; flex-basis: 400px;"
    >
      <ui5-button
        design="Default"
        ui5-button=""
      >
        Button 2
      </ui5-button>
    </div>
    <div
      class="SplitterElement-splitterElement"
      data-testid="SplitterElement3"
      style="min-width: 0;"
    >
      <ui5-button
        design="Default"
        ui5-button=""
      >
        Button 3
      </ui5-button>
    </div>
  </div>
</DocumentFragment>
`;
